put/get working in strict mode

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,8 +9,11 @@ PDHT_TOP=..
 include $(PDHT_TOP)/pdht.mk
 
 .PHONY: all
-all: barrier
+all: simple
 
 
 barrier: pdhtlibs barrier.c
 	$(CC) $(CFLAGS) -o barrier barrier.c $(PDHT_LIBS)
+
+simple: pdhtlibs simple.c
+	$(CC) $(CFLAGS) -o simple simple.c $(PDHT_LIBS)
