--- a/portals4-read-only/.gitignore
+++ b/portals4-read-only/.gitignore
@@ -10,3 +10,37 @@ hydra-doxygen.cfg
 hydra_config.h
 localdefs
 bsci_init.c
+*.lo
+*.la
+.libs/
+test_LE_*
+test_LA_*
+test_ME_*
+test_PA_*
+hydra_nameserver
+hydra_persist
+hydra_pmi_proxy
+yod.hydra
+.dirstamp
+test_amo
+test_amo_barrier
+test_bootstrap
+test_ct_ack
+test_ct_overflow
+test_event
+test_init
+test_pmi_hello
+test_triggered_LE_get
+test_triggered_LE_put
+test_triggered_ME_get
+test_triggered_ME_ops
+test_triggered_ME_put
+test_triggered_ctinc
+test_triggered_ctinc_unordered
+test_triggered_ctset
+test_triggered_ctset_unordered
+make_test_atomic
+make_test_move
+make_test_swap
+ptl_test
+test
