added collision/not found detection

--- a/test/Makefile
+++ b/test/Makefile
@@ -18,6 +18,12 @@ barrier: pdhtlibs barrier.c
 simple: pdhtlibs simple.c
 	$(CC) $(CFLAGS) -o simple simple.c $(PDHT_LIBS)
 
+notfound: pdhtlibs notfound.c
+	$(CC) $(CFLAGS) -o notfound notfound.c $(PDHT_LIBS)
+
+collision: pdhtlibs collision.c
+	$(CC) $(CFLAGS) -o collision collision.c $(PDHT_LIBS)
+
 trig: pdhtlibs trig.c
 	$(CC) $(CFLAGS) -o trig trig.c $(PDHT_LIBS)
 
