--- a/test/Makefile
+++ b/test/Makefile
@@ -36,6 +36,9 @@ optimes: pdhtlibs optimes.c
 oshbench: pdhtlibs oshbench.c
 	$(CC) $(CFLAGS) -o oshbench oshbench.c $(PDHT_LIBS)
 
+scaling: pdhtlibs scaling.c
+	$(CC) $(CFLAGS) -o scaling scaling.c $(PDHT_LIBS)
+
 simple: pdhtlibs simple.c
 	$(CC) $(CFLAGS) -o simple simple.c $(PDHT_LIBS)
 
