stop complaining bullshit

--- a/portals4-read-only/.gitignore
+++ b/portals4-read-only/.gitignore
@@ -48,3 +48,6 @@ strsep
 strsep.log
 strsep.trs
 test-suite.log
+autom4te.cache/requests
+src/runtime/hydra/autom4te.cache/requests
+src/runtime/hydra/mpl/autom4te.cache/requests
