--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bench/hash-table-benchmark"]
 	path = bench/hash-table-benchmark
 	url = https://github.com/openshmem-org/hash-table-benchmark.git
+[submodule "uthash"]
+	path = uthash
+	url = https://github.com/troydhanson/uthash.git
