--- a/portals4/.gitignore
+++ b/portals4/.gitignore
@@ -51,3 +51,62 @@ test-suite.log
 autom4te.cache/requests
 src/runtime/hydra/autom4te.cache/requests
 src/runtime/hydra/mpl/autom4te.cache/requests
+Makefile.in
+aclocal.m4
+config/ar-lib
+config/compile
+config/config.guess
+config/config.sub
+config/depcomp
+config/install-sh
+config/libtool.m4
+config/ltmain.sh
+config/ltoptions.m4
+config/ltsugar.m4
+config/ltversion.m4
+config/lt~obsolete.m4
+config/missing
+config/test-driver
+configure
+doc/Makefile.in
+include/Makefile.in
+include/config.h.in
+src/Makefile.in
+src/ib/Makefile.in
+src/runtime/Makefile.in
+src/runtime/hydra/Makefile.in
+src/runtime/hydra/aclocal.m4
+src/runtime/hydra/confdb/ar-lib
+src/runtime/hydra/confdb/compile
+src/runtime/hydra/confdb/config.guess
+src/runtime/hydra/confdb/config.sub
+src/runtime/hydra/confdb/depcomp
+src/runtime/hydra/confdb/install-sh
+src/runtime/hydra/confdb/libtool.m4
+src/runtime/hydra/confdb/ltmain.sh
+src/runtime/hydra/confdb/ltoptions.m4
+src/runtime/hydra/confdb/ltversion.m4
+src/runtime/hydra/confdb/lt~obsolete.m4
+src/runtime/hydra/confdb/missing
+src/runtime/hydra/config.system
+src/runtime/hydra/configure
+src/runtime/hydra/include/hydra_config.h.in
+src/runtime/hydra/mpl/Makefile.in
+src/runtime/hydra/mpl/_configs.sed
+src/runtime/hydra/mpl/aclocal.m4
+src/runtime/hydra/mpl/confdb/ar-lib
+src/runtime/hydra/mpl/confdb/compile
+src/runtime/hydra/mpl/confdb/config.guess
+src/runtime/hydra/mpl/confdb/config.sub
+src/runtime/hydra/mpl/confdb/depcomp
+src/runtime/hydra/mpl/confdb/install-sh
+src/runtime/hydra/mpl/confdb/libtool.m4
+src/runtime/hydra/mpl/confdb/ltmain.sh
+src/runtime/hydra/mpl/confdb/ltoptions.m4
+src/runtime/hydra/mpl/confdb/ltversion.m4
+src/runtime/hydra/mpl/confdb/lt~obsolete.m4
+src/runtime/hydra/mpl/confdb/missing
+src/runtime/hydra/mpl/confdb/test-driver
+src/runtime/hydra/mpl/configure
+src/runtime/hydra/mpl/include/config.h.in
+src/runtime/hydra/mpl/include/mplconfig.h
