--- a/portals4/.gitignore
+++ b/portals4/.gitignore
@@ -13,6 +13,8 @@ bsci_init.c
 *.lo
 *.la
 .libs/
+*.trs
+*.log
 test_LE_*
 test_LA_*
 test_ME_*
@@ -43,7 +45,6 @@ make_test_atomic
 make_test_move
 make_test_swap
 ptl_test
-test
 strsep
 strsep.log
 strsep.trs
