stats:   - add min/max reductions to reduce/allreduce   - use reductions to accumulate/provide global stats   - stats are called by exit handler
hashing:
  - track rank of each put() op, so we can understand hash entry
    distribution
  - add SSE extensions to optimize for CityHash functions

bugs:
  - trigger progress thread now refills pending q when half depleted
  - trigger progress thread consumes PUT events, watches for flow
    control events
  - Portals counter allocation should be total table size, not
    pending q size

--- a/libpdht/Makefile
+++ b/libpdht/Makefile
@@ -16,6 +16,7 @@ HDRS =  pdht.h pdht_impl.h pdht_inline.h
 
 OBJS =  assoc.o      \
         atomics.o  \
+        city.o  \
         commsynch.o  \
         hash.o       \
         init.o       \
@@ -31,6 +32,7 @@ OBJS =  assoc.o      \
 all: libpdht.a
 
 libpdht.a: headers $(OBJS)
+	mkdir -p ../lib
 	$(AR) rcs ../lib/libpdht.a $(OBJS)
 	$(RANLIB) ../lib/libpdht.a
 
@@ -38,7 +40,8 @@ $(OBJS): $(HDRS)
 
 .PHONY: headers
 headers: 
-	cp pdht_inline.h pdht.h ../include/.
+	mkdir -p ../include
+	cp city.h citycrc.h pdht_inline.h pdht.h ../include/.
 
 .PHONY: clean
 clean:
