working on writing new paper
using ACMart template for PPoPP (not happening) anyways. gotta use
something.

--- a/doc/paper17/Makefile
+++ b/doc/paper17/Makefile
@@ -1,14 +1,12 @@
 SOURCES=abstract.tex conclusion.tex\
         implementation.tex introduction.tex\
         overview.tex paper.tex\
-        progmodel.tex related.tex results.tex 
+        progmodel.tex background.tex results.tex 
 
 all: paper.pdf
 
 paper.pdf:  $(SOURCES)
-	pdflatex paper
-	pdflatex paper
-	pdflatex paper
+	latexmk -pdf paper.tex
 
 clean:
 	rm -f *~ *.dvi *.pdf *.aux *.bbl *.log *.blg *.synctex.gz *.fdb_latexmk *.fls
