- added counter for "consumed" portals resources i.e. pending + active MEs/CTs etc.
- added PDHT_USE_INTERNAL_TIMERS to disable internal timing during
  perf testing

- removed bullshit timing from putget.c

- overhauled latency analysis, replaced optimes.c with updated
  version

--- a/test/Makefile
+++ b/test/Makefile
@@ -33,6 +33,9 @@ insert: pdhtlibs insert.c
 latency: pdhtlibs latency.c
 	$(CC) $(CFLAGS) -o latency latency.c $(PDHT_LIBS)
 
+latencies: pdhtlibs latencies.c
+	$(CC) $(CFLAGS) -o latencies latencies.c $(PDHT_LIBS)
+
 matchlength: pdhtlibs matchlength.c
 	$(CC) $(CFLAGS) -o matchlength matchlength.c $(PDHT_LIBS)
 
