updated paper text
Former-commit-id: a88ac5691ff19d9ae8517a5126f51694a8d83e12

--- a/doc/paper17/Makefile
+++ b/doc/paper17/Makefile
@@ -9,4 +9,4 @@ paper.pdf:  $(SOURCES)
 	latexmk -pdf paper.tex
 
 clean:
-	rm -f *~ *.dvi *.pdf *.aux *.bbl *.log *.blg *.synctex.gz *.fdb_latexmk *.fls
+	rm -f *~ *.dvi *.pdf *.aux *.bbl *.log *.blg *.synctex.gz *.fdb_latexmk *.fls paper.out *.vim paper_aux
