adding changes to pdht.h for locks and communicators and make scalingMPI
Former-commit-id: d41593934c011720d1c7ba0b796f56db3cd73129

--- a/test/Makefile
+++ b/test/Makefile
@@ -70,6 +70,9 @@ pointPracticeMPI: pdhtmpilibs pointPractice.c
 scaling: pdhtlibs scaling.c
 	$(CC) $(CFLAGS) -o scaling scaling.c $(PDHT_LIBS)
 
+scalingMPI: pdhtmpilibs scaling.c
+	$(MPICC) $(CFLAGSMPI) -o scalingMPI scaling.c $(PDHT_MPILIBS)
+
 simple: pdhtlibs simple.c
 	$(CC) $(CFLAGS) -o simple simple.c $(PDHT_LIBS)
 
