diff make file with MPI something is wrong tho
Former-commit-id: 380fbf529e87f525feaa23e30913f1ee77f3cae3

--- a/bench/diff/Makefile
+++ b/bench/diff/Makefile
@@ -20,3 +20,6 @@ all: diff
 
 diff: pdhtlibs $(OBJS) diff3d.o 
 	$(CC) $(CFLAGS) -o diff diff3d.o $(OBJS) $(PDHT_LIBS)
+
+diffMPI: pdhtmpilibs $(OBJS) diff3d.o
+	$(MPICC) $(CFLAGSMPI) -o diffmpi diff3d.o $(OBJS) $(PDHT_MPILIBS)
