- minor fixes to benches - normalize rank reporting in MPI versions
Former-commit-id: a945ba77a4d3f4025e07bd94dd53a591e7cee434

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,7 +9,7 @@ PDHT_TOP=..
 include $(PDHT_TOP)/pdht.mk
 
 .PHONY: all
-all: pointPractice
+all: scaling
 
 
 barrier: pdhtlibs barrier.c
@@ -73,7 +73,7 @@ scaling: pdhtlibs scaling.c
 	$(CC) $(CFLAGS) -o scaling scaling.c $(PDHT_LIBS)
 
 scalingMPI: pdhtmpilibs scaling.c
-	$(MPICC) $(CFLAGSMPI) -o scalingMPI scaling.c $(PDHT_MPILIBS)
+	$(MPICC) $(CFLAGSMPI) -DMPI=1 -o scalingMPI scaling.c $(PDHT_MPILIBS)
 
 simple: pdhtlibs simple.c
 	$(CC) $(CFLAGS) -o simple simple.c $(PDHT_LIBS)
