finally figured that out
Former-commit-id: be5a1bb2d120696bd5391a32dbb7fa459e5d051e

--- a/bench/diff/Makefile
+++ b/bench/diff/Makefile
@@ -6,7 +6,14 @@
 
 PDHT_TOP=../..
 
+
+
 include $(PDHT_TOP)/pdht.mk
+
+
+
+diffMPI: CC = $(MPICC)
+diffMPI: CFLAGS = $(CFLAGSMPI)
 
 OBJS =  alloc.o          \
 				init.o           \
@@ -14,7 +21,6 @@ OBJS =  alloc.o          \
 				tensor.o         \
 				tree.o           \
         # line eater
-
 .PHONY: all
 all: diff
 
@@ -22,4 +28,4 @@ diff: pdhtlibs $(OBJS) diff3d.o
 	$(CC) $(CFLAGS) -o diff diff3d.o $(OBJS) $(PDHT_LIBS)
 
 diffMPI: pdhtmpilibs $(OBJS) diff3d.o
-	$(MPICC) $(CFLAGSMPI) -o diffmpi diff3d.o $(OBJS) $(PDHT_MPILIBS)
+	$(MPICC) $(CFLAGSMPI) -o diffMPI diff3d.o $(OBJS) $(PDHT_MPILIBS)
