changes for timing issues
Former-commit-id: ad170f699744f2964a71ed9833763c6d57bd9f97

--- a/bench/diff/Makefile
+++ b/bench/diff/Makefile
@@ -13,7 +13,7 @@ include $(PDHT_TOP)/pdht.mk
 
 
 diffMPI: CC = $(MPICC)
-diffMPI: CFLAGS = $(CFLAGSMPI)
+diffMPI: CFLAGS = $(CFLAGSMPI) -DMPI
 
 OBJS =  alloc.o          \
 				init.o           \
@@ -28,4 +28,4 @@ diff: pdhtlibs $(OBJS) diff3d.o
 	$(CC) $(CFLAGS) -o diff diff3d.o $(OBJS) $(PDHT_LIBS)
 
 diffMPI: pdhtmpilibs $(OBJS) diff3d.o
-	$(MPICC) $(CFLAGSMPI) -o diffMPI diff3d.o $(OBJS) $(PDHT_MPILIBS)
+	$(MPICC) $(CFLAGSMPI) -DMPI=1 -o diffMPI diff3d.o $(OBJS) $(PDHT_MPILIBS)
