- change build system a little to support linking with UPC - add rank hint as a tunable param (again, UPC) - fix tuning calls in scaling/optimes
NOTE: build system now assumes that portals installation is in
external and in $HOME/opt, if you want to use internal version
update pdht.mk accordingly

Former-commit-id: ae17d84b9dfe80b5fe2ef4604296459c16086c76

--- a/libmpipdht/Makefile
+++ b/libmpipdht/Makefile
@@ -5,7 +5,7 @@
 
 
 
-CFLAGS=$(GCFLAGS) -I. -I../include -I../$(PORTALS_INCLUDEDIR)
+CFLAGS=$(GCFLAGS) -I. -I../include -I$(PORTALS_INCLUDEDIR)
 
 RANLIB = /usr/bin/ranlib
 
