- add an atomic compare-swap function on remote HT entries:   pdht_atomic_cswap(ht, key, offset, &oldval, newval);
only works for int64_t right now

needed for Meraculous


Former-commit-id: db3c4d1f7b13a88984afb7a86ae6a2477ac65a21

--- a/test/Makefile
+++ b/test/Makefile
@@ -11,6 +11,8 @@ include $(PDHT_TOP)/pdht.mk
 .PHONY: all
 all: pointPractice
 
+atomic: pdhtlibs atomic.c
+	$(CC) $(CFLAGS) -o atomic atomic.c $(PDHT_LIBS)	
 
 barrier: pdhtlibs barrier.c
 	$(CC) $(CFLAGS) -o barrier barrier.c $(PDHT_LIBS)	
