- add support for iterating over local entries of the dht
Former-commit-id: 8fe01bae2e74dc823b0a3cf4b047e90ef6a613e3

--- a/libpdht/Makefile
+++ b/libpdht/Makefile
@@ -20,6 +20,7 @@ OBJS =  assoc.o      \
         commsynch.o  \
         hash.o       \
         init.o       \
+        iter.o       \
         nbputget.o   \
         pmi.o        \
         poll.o       \
