updates to diff for running paper numbers
Former-commit-id: 35e0a4f60956a880d1cad20cc0095ff12c51bdde

--- a/bench/diff/Makefile
+++ b/bench/diff/Makefile
@@ -25,7 +25,7 @@ OBJS =  alloc.o          \
 all: diff
 
 diff: pdhtlibs $(OBJS) diff3d.o 
-	$(CC) $(CFLAGS) -o diff diff3d.o $(OBJS) $(PDHT_LIBS)
+	$(CC) $(CFLAGS) -lrt -o diff diff3d.o $(OBJS) $(PDHT_LIBS)
 
 diffMPI: pdhtmpilibs $(OBJS) diff3d.o
 	$(MPICC) $(CFLAGSMPI) -DMPI=1 -o diffMPI diff3d.o $(OBJS) $(PDHT_MPILIBS)
