kmer_hash.h:  - fix memory initialization bugs  - fix memory reference bugs  - clean up error handling
buildUFXbinary.h:
 - cleaned up HT creation a bit
 - fixed memory issues with insertion
 - use put instead of insert because of broken pdht_insert

meraculous.[ch]:
 - add routines to print PDHT keys and values (kind of)

UU_traversal_final.h:
 - fix race condition with local iteration
 - fix using &array when array ptr will do fine
 - add support for base iteration timing
 - add detailed timers for traversal timing
 - add sanity checking code for global table

reindented files: (sorry, makes noisy diffs)
 - packingDNAseq.h
 - buildUFXhashBinary.h
 - UU_traversal_final.h


Former-commit-id: b3babd1081739fe3ebe36f977e5f8dcc3cd2d5a8

--- a/bench/Meraculous/Makefile
+++ b/bench/Meraculous/Makefile
@@ -81,7 +81,7 @@ KMERFLAG = -DMAX_KMER_SIZE=$(MAX_KMER_SIZE) -DKMERlength=$(KMER_LENGTH)
 
 CXXFLAGS += ${KMERFLAG}
 
-default: test-mode install
+default: test-mode 
 
 all : meraculous-$(KMER_LENGTH)
 
@@ -112,7 +112,7 @@ meraculous-%-testing : pdhtlibs meraculous.c readufx.o $(OBJECTS) $(INCLUDES)
 		$(CFLAGS) \
 		readufx.o ${OBJECTS} \
 		$(UPC_CXX_LINK) \
-		-o $@ $(PDHT_LIBS)
+		-o tests/$@ $(PDHT_LIBS) -lrt
 		#-o $@ -L /opt/mvapich2/mvapich2-2.2rc1_gcc/lib -lmpi $(PDHT_LIBS)
 
 meraculous-% : pdhtlibs meraculous.c readufx.o $(OBJECTS) $(INCLUDES)
@@ -126,7 +126,7 @@ meraculous-% : pdhtlibs meraculous.c readufx.o $(OBJECTS) $(INCLUDES)
 		$(CFLAGS) \
 		readufx.o ${OBJECTS} \
 		$(UPC_CXX_LINK) \
-		-o $@ $(PDHT_LIBS)
+		-o tests/$@ $(PDHT_LIBS) -lrt
 		#-o $@ -L /opt/mvapich2/mvapich2-2.2rc1_gcc/lib -lmpi $(PDHT_LIBS)
 
 .PHONY : clean
