adding openshmem hash table w/ actives message
Former-commit-id: 089ef6ca29e9dbca0e6e8c1e0c6fd567efcbf107

--- a/test/Makefile
+++ b/test/Makefile
@@ -62,6 +62,9 @@ optimes: pdhtlibs optimes.c
 optimesMPI: pdhtmpilibs optimes.c
 	$(MPICC) $(CFLAGSMPI) -DMPI=1 -o optimesMPI optimes.c $(PDHT_MPILIBS)
 
+optimesSHMEM: pdhtoshmemlibs optimes.c
+	$(OSHCC) $(CFLAGSOSHMEM) -o optimesSHMEM optimes.c $(PDHT_OSHMEMLIBS)
+
 oshbench: pdhtlibs oshbench.c
 	$(CC) $(CFLAGS) -o oshbench oshbench.c $(PDHT_LIBS)
 
